[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = C99, C, C++
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: C
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = ==2.7.*
setup_requires =
    setuptools>=40.7.3
install_requires =
    setuptools>=40.7.3
packages = find:
package_dir =
    = src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
doc =
    Sphinx>=2.0.1
test =
    unittest2;python_version<'3.0'
    mock>=2.0.0;python_version<'3.0'

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
